--- a/Part 1 - Personal Blog/style.css
+++ b/Part 1 - Personal Blog/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto&display=swap');
+/* base styles */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Roboto&display=swap');
 
 * {
     box-sizing: border-box;
@@ -9,27 +11,29 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    line-height: 1.5;
-    background-color: #CAD2C5;
-    color: black;
-    max-width: 1100px;
-    margin: 0 auto;
+    color: #333;
+    background-color: #a1c3ff;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 30px;
+}
 
-.top-nav {
-    background-color: #84A98C;
+h1, h2 {
+    margin-bottom: 15px;
 }
 
 ul {
     list-style-type: none;
 }
 
-a {
-    color: #CAD2C5;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
+ /* top nav */
+ .top-nav {
+    background-color: #3474c6;
+    color: white;
+    height: 60px;
 }
 
 .logo {
@@ -37,29 +41,57 @@ a {
     font-weight: bold;
 }
 
-.top-nav .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    align-items: center;
+.top-nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-.top-nav ul {
-    display: flex;    
-}
-
-.top-nav ul li {
-    margin-left: 20px;
-}
-
-a:hover {
+.top-nav a:hover {
     color: lightblue;
 }
 
-.wrapper {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    background-color: #84A98C;
-    
+.top-nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.top-nav ul {
+    display: flex;
+}
+
+.top-nav ul li {
+    margin-left: 10px;
+}
+
+/* header */
+.header {
+    background-color: #0151cc;
+    color: white;
+    min-height: 400px;
+}
+
+.header h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.header img {
+    max-width: 400px;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
+    min-height: 400px;
+}
+
+.header img {
+    margin-left: 10px;
 }
