--- a/Part 1 - Personal Blog/style.css
+++ b/Part 1 - Personal Blog/style.css
@@ -138,10 +138,10 @@ button {
 /* profile */
 .profile {
     background-color: darkblue;
-    /* max-height: 200px; */
     padding: 10px;
     border-radius: 5px;
     color: white;
+    margin-bottom: 10px;
 }
 
 .profile div {
@@ -156,4 +156,24 @@ button {
     display: flex;
     justify-content: space-evenly;
     margin-top: 10px;
+}
+
+/* responsive */
+
+@media(max-width: 768px) {
+    .header .container {
+        flex-direction: column;
+        text-align: center;
+        padding-top: 20px;
+    }
+    
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header img {
+        margin-top: 10px;
+    }
 }
