add recent posts menu

--- a/Part 1 - Personal Blog/style.css
+++ b/Part 1 - Personal Blog/style.css
@@ -152,10 +152,21 @@ button {
     border-radius: 50%;
 }
 
-.profile ul {
+.social {
     display: flex;
     justify-content: space-evenly;
     margin-top: 10px;
+}
+
+/* old posts */
+.recent h4 {
+    margin-top: 10px;
+    text-align: left;
+}
+
+.recent ul {
+    margin-top: 10px;
+    text-align: left;  
 }
 
 /* responsive */
