--- a/Part 1 - Personal Blog/style.css
+++ b/Part 1 - Personal Blog/style.css
@@ -109,7 +109,7 @@ ul {
     padding: 0px;
 }
 
-.content a {
+.content aside a {
     color: white;
     text-decoration: none;
 }
@@ -135,6 +135,11 @@ button {
     margin-top: 5px;
 }
 
+article > button > a {
+    text-decoration: none;
+    color: black;
+}
+
 /* profile */
 .profile {
     background-color: darkblue;
@@ -158,7 +163,7 @@ button {
     margin-top: 10px;
 }
 
-/* old posts */
+/* recent posts */
 .recent h4 {
     margin-top: 10px;
     text-align: left;
