add footer html and footer css styles

--- a/Part 1 - Personal Blog/style.css
+++ b/Part 1 - Personal Blog/style.css
@@ -179,6 +179,24 @@ article > p {
     margin-bottom: 10px;
 }
 
+/* footer */ 
+footer {
+    background-color: #3474c6;
+    color: white;
+    height: 60px;
+    
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 30px;
+}
+
 /* responsive */
 @media(max-width: 768px) {
     .header .container {
